syntax = "proto3";

package pb;

service Transaction {
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse) {}
}

message CreateTransactionRequest {
  string notes = 1;
  string account_id = 2;
  string tracking_id = 3;
  TransactionValue transaction_value = 4;
  TransactionType transaction_type = 5;
  DestinationHolder destination_holder = 6;
}

message CreateTransactionResponse {
  string id = 1;
}

message TransactionValue {
  string currency = 1;
  string amount = 2;
}

message DestinationHolder {
  string name = 1;
  string document_number = 2;
  string account_id = 3;
}

enum TransactionType {
  UNKNOWN_STATUS_TYPE = 0;
  CASHOUT = 1;
  CASHIN = 2;
  P2P = 3;
}
